<resources>
    <string name="app_name">MyTaskApp3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authentication">Authentication</string>
    <string name="your_email">Your email</string>
    <string name="send">send</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
</resources>