<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.AuthFragment">

    <TextView
        android:id="@+id/tv_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authentication"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_auth"
        android:layout_marginTop="20dp"
        android:hint="@string/your_email"
        />
    <Button
        android:id="@+id/btn_send"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:text="@string/send"
        android:textColor="@color/white"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_send"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>